<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".homepage1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page1_heading"
        android:textSize="@dimen/fontSize"
        android:padding="@dimen/headingPadding"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_marginBottom="@dimen/initial_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/email_hint"
        android:padding="@dimen/input_padding"
        android:paddingStart="@dimen/input_padding_left"
        android:background="@drawable/roundededittext"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/name_hint"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:padding="@dimen/input_padding"
        android:paddingStart="@dimen/input_padding_left"
        android:background="@drawable/roundededittext"
        android:id="@+id/etName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/info_hint"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:padding="@dimen/input_padding"
        android:paddingStart="@dimen/input_padding_left"
        android:background="@drawable/roundededittext"
        android:id="@+id/etContact"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/country_hint"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:padding="@dimen/input_padding"
        android:paddingStart="@dimen/input_padding_left"
        android:background="@drawable/roundededittext"
        android:id="@+id/etCountry"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/address_hint"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:padding="@dimen/input_padding"
        android:paddingStart="@dimen/input_padding_left"
        android:background="@drawable/roundededittext"
        android:id="@+id/etAddress"
        />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="@dimen/marginTop"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/btnNext"
        android:backgroundTint="@color/red"
        />



</LinearLayout>