<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".finalPage1">

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3_heading"
        android:textSize="@dimen/fontSize"
        android:padding="@dimen/headingPadding"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_heading1"
        android:textSize="@dimen/table_heading"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvReview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvCountry"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_heading2"
        android:textSize="@dimen/table_heading"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvReview"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/tvAddress"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_heading3"
        android:textSize="@dimen/table_heading"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvReview"
        app:layout_constraintStart_toEndOf="@id/tvCountry"
        app:layout_constraintEnd_toStartOf="@id/tvInfo"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/table_heading4"
        android:textSize="@dimen/table_heading"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvReview"
        app:layout_constraintStart_toEndOf="@id/tvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvSenderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Sender Name"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        android:paddingTop="@dimen/padding_body_row1_top"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSenderCountry"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvSenderCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sender Country"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        android:paddingTop="@dimen/padding_body_row1_top"
        app:layout_constraintTop_toBottomOf="@id/tvCountry"
        app:layout_constraintStart_toEndOf="@id/tvSenderName"
        app:layout_constraintEnd_toStartOf="@id/tvSenderAddress"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvSenderAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sender Address"
        android:paddingTop="@dimen/padding_body_row1_top"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        app:layout_constraintStart_toEndOf="@id/tvSenderCountry"
        app:layout_constraintEnd_toStartOf="@id/tvSenderInfo"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvSenderInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sender Info"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintStart_toEndOf="@id/tvSenderAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvSenderName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvReceiverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Receiver Name"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvReceiverCountry"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvReceiverCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Receiver Country"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toEndOf="@id/tvReceiverName"
        app:layout_constraintEnd_toStartOf="@id/tvReceiverAddress"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvReceiverAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Receiver Address"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toEndOf="@id/tvReceiverCountry"
        app:layout_constraintEnd_toStartOf="@id/tvReceiverInfo"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvReceiverInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Receiver Info"
        android:textSize="@dimen/table_heading_body"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintStart_toEndOf="@id/tvReceiverAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHorizontal_weight="1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/red"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/float_margin"
        android:id="@+id/btnFloat"
        android:contentDescription="@string/add_new_item"
        />

</androidx.constraintlayout.widget.ConstraintLayout>